Update GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- TODO 3: Add the URL to your GitHub Pages repository -->
             <ul id="anchor-list">
                 <li>
-                    <a href="https://github.com/WWSilm/COMP4900-Module2" target="_blank" rel="noopener noreferrer"
+                    <a href="https://github.com/WWSilm/WWSilm.github.io" target="_blank" rel="noopener noreferrer"
                         style="display: flex; align-items: center; gap: 8px;">
                         <img src="assets/github.png" alt="GitHub"
                             style="width: 40px; height: 40px; object-fit: contain;" />
