--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="index.css" />
         <!-- TODO 1: Add a favicon and a title -->
          <link rel="icon" href="assets/favicon.jpg" type="image/jpeg">
-        <title>尚木的个人主页 - by Silm</title>
+        <title>尚木的个人主页 - By Silm</title>
     </head>
     <body>
         <nav>
